<resources>
    <string name="app_name">MovieBrowser</string>
    <string name="home">Home</string>
    <string name="about">About us</string>
    <string name="popular_movies">Popular movies</string>
    <string name="popular_tv">Popular TV shows</string>
    <string name="movies">MOVIES</string>
    <string name="tv_shows">TV SHOWS</string>
    <string name="favourites">FAVORITES</string>
    <string name="watchlist">WATCHLIST</string>
    <string name="release">Release date</string>
    <string name="rating">Rating</string>
    <string name="language">Language</string>
    <string name="plot">Summary</string>
    <string name="unknown">Unknown</string>
    <string name="recent">Recent</string>
    <string name="genre">Genre</string>
    <string name="login">AUTHENTICATE</string>
    <string name="about_version">Version 1</string>
    <string name="designed_by">Designed and developed by</string>
    <string name="developer">Anders Engen Olsen</string>
    <string name="info">Developed through a project at USN</string>
    <string name="developer_email">anderseols@gmail.com</string>
    <string name="un_pw_empty">Enter username and password!</string>
    <string name="cancel">Cancel</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="best_rated">Highest rated</string>
    <string name="upcoming">Upcoming</string>
    <string name="error">Error occurred. Do you have internet connection?</string>
    <string name="error_json">Error parsing data from server</string>
    <string name="no_browser">You must install a web browser!</string>
    <string name="error_login">Error logging in..</string>
    <string name="logged_in">You are logged in!</string>
    <string name="not_logged_in">You are not logged in!</string>
    <string name="error_adding_list">Error occurred. Have you authorized the app?</string>
    <string name="updated_list">List updated!</string>
    <string name="already_logged_in">Already logged in</string>
    <string name="video_not_found">Video not found</string>
    <string name="trailer_not_found">Trailer not found</string>
    <string name="search">SEARCH</string>
    <string name="added_rating">Added rating</string>
    <string name="error_rating">Error adding rating</string>
    <string name="done">Done!</string>
    <string name="add_rating">Add rating</string>
    <string name="genres">Genres</string>
    <string name="no_genres">Unable to download genres</string>
    <string name="similar">SIMILAR</string>
</resources>
